--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "cboden/ratchet": "^0.4.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "react/zmq": "^0.4.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
